B-F Backup Sandbox 30.4.12/src/objects/Tuition_Refund__c.object
<CustomObject>
    <description>Used in conjunction with Degree Declaration and Course Details objects to make up Tuition Reimbursement Application</description>
    <fields>
        <fullName>Amount__c</fullName>
        <inlineHelpText>Enter the amount of other tuition assistance you receive.</inlineHelpText>
        <label>Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_and_Lock__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Once checked the FinalApprovalStatus is set to Closed. The validation rule then prevents any edits to the user fields.</description>
        <label>Close and Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Approver__c</fullName>
        <label>Approved/Rejected By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Degree_Declaration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select Degree Declaration</description>
        <inlineHelpText>Select Degree Declaration</inlineHelpText>
        <label>Degree Declaration</label>
        <referenceTo>Degree_Declaration__c</referenceTo>
        <relationshipLabel>Tuition Refund</relationshipLabel>
        <relationshipName>Tuition_Reimbursement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <formula>Degree_Declaration__r.Employee_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinalApprovalStatus__c</fullName>
        <label>FinalApprovalStatus</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_course_in_the_degree_program__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this your first course in the degree program?</inlineHelpText>
        <label>First course in the degree program?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Four_4__c</fullName>
        <defaultValue>&quot;Is this coursework part of a program of study which will lead to qualifying you for a new trade or business?  (Generally the IRS has ruled that MBA programs do not qualify individuals for a new trade or business.)&quot;</defaultValue>
        <label>4.</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HR_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HR Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tuition_Refund1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Have_you_changed_majors__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have you changed majors since last attending school</inlineHelpText>
        <label>Have you changed majors?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Have_you_changed_positions__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have you changed positions since last attending school?</inlineHelpText>
        <label>Have you changed positions?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IRS_Rules__c</fullName>
        <defaultValue>&quot;If questions 1 and/or 2 are answered &apos;yes&apos; and both questions 3 and 4 are answered &apos;no&apos;, the reimbursement of these educational expenses will not be subject to payroll tax withholding.&quot; &amp; BR() &amp; BR() &amp; &quot;IRS rules permit the deduction of educational expense only if the coursework is needed to maintain or improve current job skills, or to retain current employment relationships, status or rate of compensation.  The IRS does not permit the deduction of educational expenses to meet the minimum educational requirements for qualifications in the current job or in a new position or trade.  Please complete each of the following questions.&quot;</defaultValue>
        <label>IRS Rules</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <defaultValue>&quot;Enter Tuition Refund Details and save &gt;&gt; Enter Course Detail(s) and save &gt;&gt; Submit for Approval.&quot; &amp; BR() &amp; 
&quot;On completion of your semester, Upload Invoice(s) and Grades(s). Go to the Google Notes and Attachments section &gt;&gt; Click on Attach File to upload. &gt;&gt; Check the Invoice(s) and Grades(s) Attached checkbox on the Tuition Refund form when done.&quot;</defaultValue>
        <label>Instructions</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_s_Grades_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Scroll below to the Google Doc, Notes and Attachments section --&gt; Click on Attach File --&gt; Upload your Invoice(s) and Grades.</inlineHelpText>
        <label>Invoice(s) / Grades Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LinkPrefix__c</fullName>
        <label>LinkPrefix</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major__c</fullName>
        <description>Enter Major</description>
        <formula>Degree_Declaration__r.Major__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Enter Major</inlineHelpText>
        <label>Major</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tuition_Refund2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Approver__c</fullName>
        <formula>IF(Current_Approver__c = &quot;Submitted for Approval&quot;, Manager__r.FirstName &amp;&quot; &quot;&amp; Manager__r.LastName, IF(AND(Current_Approver__c = Manager__r.FirstName &amp;&quot; &quot;&amp; Manager__r.LastName , ProgramAdminStatus__c = &quot;Rejected&quot;),&quot;Rejected&quot;,
IF(AND(Current_Approver__c = Manager__r.FirstName &amp;&quot; &quot;&amp; Manager__r.LastName, ProgramAdminStatus__c &lt;&gt; &quot;Rejected&quot;),HR_Manager__r.FirstName &amp;&quot; &quot;&amp; HR_Manager__r.LastName, 
IF(AND(Current_Approver__c = HR_Manager__r.FirstName &amp;&quot; &quot;&amp; HR_Manager__r.LastName, ProgramAdminStatus__c = &quot;Rejected&quot;),Manager__r.FirstName &amp;&quot; &quot;&amp; Manager__r.LastName,
IF(AND(Current_Approver__c = HR_Manager__r.FirstName &amp;&quot; &quot;&amp; HR_Manager__r.LastName, ProgramAdminStatus__c &lt;&gt; &quot;Rejected&quot;),Program_Admin_Name__c ,
IF(AND(Current_Approver__c = Program_Admin_Name__c , ProgramAdminStatus__c = &quot;Rejected&quot;), HR_Manager__r.FirstName &amp;&quot; &quot;&amp; HR_Manager__r.LastName,
IF(ProgramAdminStatus__c = &quot;Closed&quot;, &quot;Approvals Completed&quot; ,
 &quot;Not Submitted for Approval&quot;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Courses__c</fullName>
        <description>Roll-up summary field used within the workflow to determine if the user has created atleast one course detail record</description>
        <label>Number of Courses</label>
        <summaryForeignKey>Course_Details__c.Tuition_Refund__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>One_1__c</fullName>
        <defaultValue>&quot;Is this coursework required by your employer or by law to maintain your current job?&quot;</defaultValue>
        <label>1.</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProgramAdminStatus__c</fullName>
        <defaultValue>&quot;Open&quot;</defaultValue>
        <label>ProgramAdminStatus</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Admin_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is populated by the trigger beforeinsertupdateManagerNameforTuition_Refund</description>
        <label>Program Admin Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tuition_Refund</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Admin_Name__c</fullName>
        <description>This field is populated by the trigger beforeinsertUpdateManagerNameforTuition_Refund</description>
        <label>Program Admin Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_to_maintain_current_position__c</fullName>
        <inlineHelpText>Is this coursework required by your employer to maintain your current position or required by law or regulation to maintain your current position?</inlineHelpText>
        <label>Required to maintain current  position?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <formula>Degree_Declaration__r.School_To_Be_Attended__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_of_other_tuition_assistance__c</fullName>
        <inlineHelpText>Enter the source of other tuition assistance you receive. Enter none if you do not receive any other tuition assistance.</inlineHelpText>
        <label>Source of other tuition assistance</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IMAGE( CASE( ProgramAdminStatus__c , 
&quot;Open&quot;, &quot;/img/samples/light_red.gif&quot;, 
&quot;Rejected&quot;, &quot;/img/samples/light_red.gif&quot;, 
&quot;Closed&quot;, &quot;/img/samples/light_green.gif&quot;, &quot;/img/samples/light_yellow.gif&quot;),&quot;Status&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmitforApproval__c</fullName>
        <defaultValue>&quot;True&quot;</defaultValue>
        <label>SubmitforApproval</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taken_to_maintain_or_improve_skills__c</fullName>
        <inlineHelpText>Is this coursework taken to maintain or improve skills necessary to perform your current duties as an employee of Brown-Forman?</inlineHelpText>
        <label>Taken to maintain or improve skills?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Taken_to_qualify_for_current_position__c</fullName>
        <inlineHelpText>Is this coursework taken to attain the minimum educational requirements to qualify for your current position?</inlineHelpText>
        <label>Taken to qualify for current position?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Taken_to_qulaify_for_new_trade_business__c</fullName>
        <inlineHelpText>Is this coursework part of a program of study which will lead to qualifying you for a new trade or business?  (Generally the IRS has ruled that MBA programs do not qualify individuals for a new trade or business.)</inlineHelpText>
        <label>Taken to qulaify for new trade/business?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Three_3__c</fullName>
        <defaultValue>&quot;Is this coursework taken to attain the minimum educational requirements to qualify for your current job?&quot;</defaultValue>
        <label>3.</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Two_2__c</fullName>
        <defaultValue>&quot;Is this coursework taken to maintain or improve skills required to perform your current duties as an employee of Brown-Forman?&quot;</defaultValue>
        <label>2.</label>
        <type>TextArea</type>
    </fields>
    <label>Tuition Refund</label>
    <listViews>
        <fullName>All_Approved</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Employee_Name__c</columns>
        <columns>School__c</columns>
        <columns>Major__c</columns>
        <columns>Current_Approver__c</columns>
        <columns>Next_Approver__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProgramAdminStatus__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Close_and_Lock__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Approved</label>
        <language>en_US</language>
        <sharedTo>
            <group>FDC-Tuition Reimbursement Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Closed</fullName>
        <columns>NAME</columns>
        <columns>Employee_Name__c</columns>
        <columns>School__c</columns>
        <columns>Major__c</columns>
        <columns>Current_Approver__c</columns>
        <columns>Next_Approver__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FinalApprovalStatus__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>All Closed</label>
        <language>en_US</language>
        <sharedTo>
            <group>FDC-Tuition Reimbursement Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open</fullName>
        <columns>NAME</columns>
        <columns>Employee_Name__c</columns>
        <columns>School__c</columns>
        <columns>Major__c</columns>
        <columns>Current_Approver__c</columns>
        <columns>Next_Approver__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProgramAdminStatus__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>ProgramAdminStatus__c</field>
            <operation>notEqual</operation>
            <value>Rejected</value>
        </filters>
        <label>All Open</label>
        <language>en_US</language>
        <sharedTo>
            <group>FDC-Tuition Reimbursement Admins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Approved</fullName>
        <columns>NAME</columns>
        <columns>Employee_Name__c</columns>
        <columns>School__c</columns>
        <columns>Major__c</columns>
        <columns>Current_Approver__c</columns>
        <columns>Next_Approver__c</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ProgramAdminStatus__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>My Approved</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Open</fullName>
        <columns>NAME</columns>
        <columns>Employee_Name__c</columns>
        <columns>School__c</columns>
        <columns>Major__c</columns>
        <columns>Current_Approver__c</columns>
        <columns>Next_Approver__c</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ProgramAdminStatus__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>ProgramAdminStatus__c</field>
            <operation>notEqual</operation>
            <value>Rejected</value>
        </filters>
        <label>My Open</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Rejected</fullName>
        <columns>NAME</columns>
        <columns>Employee_Name__c</columns>
        <columns>School__c</columns>
        <columns>Major__c</columns>
        <columns>Current_Approver__c</columns>
        <columns>Next_Approver__c</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ProgramAdminStatus__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>My Rejected</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Semester</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tuition Refund</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Share_record_with_Manager_and_HR_Manager__c</fullName>
        <label>Share record with Manager and HR Manager</label>
    </sharingReasons>
    <validationRules>
        <fullName>PreventEdits_FinalApprovalStatusClosed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR( ISCHANGED( Name),
ISCHANGED(First_course_in_the_degree_program__c ),
ISCHANGED(Have_you_changed_positions__c ),
ISCHANGED(Manager__c ),
ISCHANGED(Degree_Declaration__c ),
ISCHANGED(Have_you_changed_majors__c ),
ISCHANGED(Source_of_other_tuition_assistance__c ),
ISCHANGED(Amount__c ),
ISCHANGED(Required_to_maintain_current_position__c),
ISCHANGED(Taken_to_maintain_or_improve_skills__c),
ISCHANGED(Taken_to_qualify_for_current_position__c),
ISCHANGED(Taken_to_qulaify_for_new_trade_business__c),
ISCHANGED( Invoice_s_Grades_Attached__c)), 
CONTAINS(FinalApprovalStatus__c, &quot;Closed&quot;), Close_and_Lock__c, NOT( ISNEW() ))</errorConditionFormula>
        <errorMessage>This record is closed and cannot be edited.</errorMessage>
    </validationRules>
</CustomObject>